@@ -1,3 +1,13 @@
+2019-05-23  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [WPE] Build fails with ENABLE_VIDEO=OFF and ENABLE_WEB_AUDIO=OFF
+        https://bugs.webkit.org/show_bug.cgi?id=198125
+
+        Reviewed by Philippe Normand.
+
+        * UIProcess/glib/WebProcessPoolGLib.cpp: Guard the inclusion of GStreamerCommon.h with USE(GSTREAMER).
+        * WebProcess/glib/WebProcessGLib.cpp: Ditto.
+
 2019-05-20  Adrian Perez de Castro  <aperez@igalia.com>
 
         Unreviewed. Update OptionsWPE.cmake and NEWS for the 2.24.2 release
